--- a/index.html
+++ b/index.html
@@ -108,4 +108,88 @@
       </div>
       <!-- END EXPERIENCE -->
 
+      <!-- BEGIN EDUCATION -->
+      <div class="row white box-shadow">
+        <div class="side-content"></div>
+        <div class="main-content">
+          <div class="content-header">
+            <a class="anchor" name="education"></a>
+            <h2>Education</h2>
+          </div>
+          <div class="content-body">
+
+            <!-- EDUCATION 1 -->
+            <div class="card">
+              <div class="card-header">
+                <h4>School <span class="job-title">Dates Attended</span></h4>
+              </div>
+              <div class="card-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+            </div>
+            <!-- EDUCATION 2 -->
+            <div class="card">
+              <div class="card-header">
+                <h4>School <span class="job-title">Dates Attended</span></h4>
+              </div>
+              <div class="card-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="side-content"></div>
+      </div>
+      <!-- END EDUCATION -->
+
+ <!-- BEGIN PROJECTS -->
+ <div class="row">
+    <div class="side-content-sm"></div>
+    <div class="main-content-lg">
+      <div class="content-header">
+        <a class="anchor" name="projects"></a>
+        <h2>Projects</h2>
+      </div>
+      <div class="content-body">
+        <!-- CARD #1 -->
+        <div class="project-card">
+          <div class="project-image">
+            <img src="http://placehold.it/250x350">
+          </div>
+          <div class="project-content">
+            <h4>Project Name</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="#">Link Text</a>
+          </div>
+        </div>
+        <!-- CARD #2 -->
+        <div class="project-card">
+          <div class="project-image">
+            <img src="http://placehold.it/250x350">
+          </div>
+          <div class="project-content">
+            <h4>Project Name</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="#">Link Text</a>
+          </div>
+        </div>
+        <!-- CARD #3 -->
+        <div class="project-card">
+          <div class="project-image">
+            <img src="http://placehold.it/250x350">
+          </div>
+          <div class="project-content">
+            <h4>Project Name</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="#">Link Text</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="side-content-sm"></div>
+  </div>
+  <!-- END PROJECTS -->
+
 </html>
