--- a/index.html
+++ b/index.html
@@ -192,4 +192,75 @@
   </div>
   <!-- END PROJECTS -->
 
+<!-- BEGIN SKILLS -->
+<div class="row white box-shadow">
+    <div class="side-content"></div>
+    <div class="main-content">
+      <div class="content-header">
+        <a class="anchor" name="skills"></a>
+        <h2>Skills</h2>
+      </div>
+      <div class="content-body">
+        <ul class="ul-skills">
+          <li class="li-skills">Javascript</li>
+          <li class="li-skills">HTML</li>
+          <li class="li-skills">CSS</li>
+          <li class="li-skills">React</li>
+          <li class="li-skills">Node.js</li>
+          <li class="li-skills">Bootstrap</li>
+          <li class="li-skills">Webpack</li>
+          <li class="li-skills">jQuery</li>
+          <li class="li-skills">Javascript</li>
+          <li class="li-skills">HTML</li>
+          <li class="li-skills">CSS</li>
+          <li class="li-skills">React</li>
+          <li class="li-skills">Node.js</li>
+          <li class="li-skills">Bootstrap</li>
+          <li class="li-skills">Webpack</li>
+          <li class="li-skills">jQuery</li>
+        </ul>
+      </div>
+    </div>
+    <div class="side-content"></div>
+  </div>
+  <!-- END SKILLS -->
+
+      <!-- BEGIN CONTACT -->
+
+      <div class="row blue">
+        <div class="side-content"></div>
+        <div class="main-content">
+          <div class="content-header">
+            <a class="anchor" name="contact"></a>
+            <h2 class="white-text">Contact Me</h2>
+          </div>
+          <div class="contact content-body">
+            <form method="POST" action="https://formspree.io/email@email.com">
+                <input type="hidden" name="_subject" value="Contact request from personal website" />
+                <input type="email" name="_replyto" placeholder="Your email" required>
+                <textarea name="message" placeholder="Your message" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+          </div>
+        </div>
+        <div class="side-content"></div>
+      </div>
+      <!-- END CONTACT -->
+
+      <!-- BEGIN FOOTER -->
+      <div class="row">
+        <div class="side-content"></div>
+        <div class="main-content">
+          <div class="content-header">
+          </div>
+          <div class="content-body">
+            <p>Copyright YOUR NAME 2017</p>
+          </div>
+        </div>
+        <div class="side-content"></div>
+      </div>
+      <!-- END FOOTER -->
+
+    </div>
+  </body>
 </html>
