--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
                 <h2>About</h2>
               </div>
               <div class="content-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>A motivated and technically skilled software engineer with a background in full-stack web application development.
+                Experienced in developing web applications and proficient in technologies including JavaScript, Python, React, Node.js, and MongoDB.
+                Proven ability to collaborate effectively in team environments to deliver high-quality solutions</p>
               </div>
             </div>
             <div class="side-content"></div>
