--- a/index.html
+++ b/index.html
@@ -122,19 +122,20 @@
             <!-- EDUCATION 1 -->
             <div class="card">
               <div class="card-header">
-                <h4>School <span class="job-title">Dates Attended</span></h4>
+                <h4>General Assembly <span class="job-title">February - May 2024</span></h4>
               </div>
               <div class="card-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Software Engineering Bootcamp</p>
               </div>
             </div>
             <!-- EDUCATION 2 -->
             <div class="card">
               <div class="card-header">
-                <h4>School <span class="job-title">Dates Attended</span></h4>
+                <h4>Virginia Commonwealth University <span class="job-title">August 2016 - May 2020</span></h4>
               </div>
               <div class="card-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>B.F.A Sculpture & Extended Media</p>
+                <p>Minor: Architecture</p>
               </div>
             </div>
 
@@ -255,7 +256,7 @@
           <div class="content-header">
           </div>
           <div class="content-body">
-            <p>Copyright YOUR NAME 2017</p>
+            <p>Copyright NOEL ELIAS 2024</p>
           </div>
         </div>
         <div class="side-content"></div>
