--- a/index.html
+++ b/index.html
@@ -71,14 +71,26 @@
             <a class="anchor" name="experience"></a>
             <h2>Experience</h2>
           </div>
+
+          <!-- CARD #0 -->
+          <div class="content-body">
+            <div class = "card">
+              <div class="card-header">
+                <h4>LightSpeed  <span class="job-title">IT Intern (with a focus on software development)</span></h4>
+              </div>
+              <div class="card-content">
+                <p>As an IT Intern with a focus on Software Development, I assisted in developing and maintaining internal software applications using technologies such as [Java/Python/JavaScript] and collaborated with the development team to design and deploy new features. I contributed to both front-end and back-end development, performed debugging and troubleshooting, and participated in code reviews, gaining hands-on experience with Agile methodologies and version control systems like Git. My role also involved writing unit tests, documenting technical processes, and working closely with cross-functional teams to meet project goals and improve software performance.</p>
+              </div>
+            </div>
+          </div>
           <!-- CARD #1 -->
           <div class="content-body">
             <div class="card">
               <div class="card-header">
-                <h4>Company <span class="job-title">Job Title</span></h4>
+                <h4>Local 52 Iatse Film <span class="job-title">Set Designer</span></h4>
               </div>
               <div class="card-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>I managed inventory records using Microsoft Excel, regularly updating spreadsheets to address discrepancies and correct errors. I created 3D mock-ups using Rhino 3D to visualize set designs, and prepared and applied finishes to television and film sets to ensure a polished final look. As a liaison between departments on set, I facilitated communication and collaboration across teams, ensuring smooth production processes. Additionally, I crafted set pieces from concept designs using a variety of physical mediums, bringing creative visions to life for film and television productions.</p>
               </div>
             </div>
 
@@ -86,10 +98,10 @@
 
             <div class="card">
               <div class="card-header">
-                <h4>Company <span class="job-title">Job Title</span></h4>
+                <h4>The Innovative Media Workshop, Virginia Commonwealth University <span class="job-title">Media Technician</span></h4>
               </div>
               <div class="card-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>I provided hands-on training to students in video and audio studios, guiding them in the creation of their own video projects, podcasts, and music. I also instructed students on the use of MakerBot 3D printers and Rhino 3D software, supporting their engineering and art projects. Additionally, I conducted weekly checks of equipment inventory and ensured the proper maintenance and upkeep of all studio equipment, ensuring a smooth and efficient learning environment for all participants.</p>
               </div>
             </div>
 
@@ -97,10 +109,10 @@
 
             <div class="card">
               <div class="card-header">
-                <h4>Company <span class="job-title">Job Title</span></h4>
+                <h4>Architects of the Capitol, U.S. Capitol <span class="job-title">Architectural Perservation Assistant</span></h4>
               </div>
               <div class="card-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>In my role, I was responsible for monitoring the artwork and interior of the United States Capitol building on a daily basis to ensure their proper maintenance and preservation. I played a key role in creating mock-ups for proposed renovations to both the artwork and the building, collaborating closely with the Architect of the Capitol team. Additionally, I recorded detailed minutes during meetings with architects, engineers, and photography aids, ensuring accurate documentation of project discussions and decisions. This work required a high level of attention to detail and strong communication skills to support ongoing preservation efforts and renovation planning.</p>
               </div>
             </div>
           </div>
@@ -204,22 +216,22 @@
       </div>
       <div class="content-body">
         <ul class="ul-skills">
-          <li class="li-skills">Javascript</li>
           <li class="li-skills">HTML</li>
           <li class="li-skills">CSS</li>
+          <li class="li-skills">Tailwind CSS</li>
+          <li class="li-skills">Bootstrap</li>
+          <li class="li-skills">JavaScript</li>
+          <li class="li-skills">Python</li>
           <li class="li-skills">React</li>
           <li class="li-skills">Node.js</li>
-          <li class="li-skills">Bootstrap</li>
-          <li class="li-skills">Webpack</li>
-          <li class="li-skills">jQuery</li>
-          <li class="li-skills">Javascript</li>
-          <li class="li-skills">HTML</li>
-          <li class="li-skills">CSS</li>
-          <li class="li-skills">React</li>
-          <li class="li-skills">Node.js</li>
-          <li class="li-skills">Bootstrap</li>
-          <li class="li-skills">Webpack</li>
-          <li class="li-skills">jQuery</li>
+          <li class="li-skills">Express</li>
+          <li class="li-skills">Django</li>
+          <li class="li-skills">MongoDB</li>
+          <li class="li-skills">MySQL</li>
+          <li class="li-skills">Restful APIs</li>
+          <li class="li-skills">API Integration: Tasty API</li>
+          <li class="li-skills">Heroku</li>
+          <li class="li-skills">AWS</li>
         </ul>
       </div>
     </div>
